--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 jobs:
   Step_B:
     runs-on: self-hosted
@@ -24,9 +27,9 @@ jobs:
     runs-on: self-hosted
     steps:
       - name: Build Docker image from Dockerfile
-        run: docker build -t Dockerimage ./Dockerfile
+        run: docker build -t weather-ml-app:ci-test
   Step_E:
     runs-on: self-hosted
     steps:
       - name: Create container
-        run: docker run --name Dockercontainer Dockerimage
+        run: docker run --rm weather-ml-app:ci-test python --version
