--- a/prod1.yml
+++ b/prod1.yml
@@ -67,7 +67,7 @@
       when: minikube_profile_exists
     
     - name: Start Minikube
-      shell: minikube start --driver=docker
+      shell: minikube start --driver=docker --force
       become: yes
       become_user: ubuntu
       environment:
