--- a/prod1.yml
+++ b/prod1.yml
@@ -2,11 +2,11 @@
   hosts: localhost
   become: yes
 
-  vars_files:
-    - secrets.yml
-
   vars:
     sys_user: "ubuntu"
+    docker_registry_user: ${{ secrets.DOCKERHUB_USERNAME }}
+    docker_registry_pass: ${{ secrets.DOCKERHUB_PASSWORD }}
+    docker_registry_email: ${{ secrets.DOCKERHUB_EMAIL }}
 
   tasks:
 
