--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -8,6 +8,11 @@ jobs:
   Step_G:
     runs-on: self-hosted
     steps:
+      - name: Install kubectl
+        run: |
+            sudo curl -L "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" -o /usr/local/bin/kubectl
+            sudo chmod +x /usr/local/bin/kubectl
+            kubectl version --client
       - name: Deploy to Kubernetes
         run: |
           kubectl apply -f k8s/deployment.yml
