--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -17,12 +17,12 @@ jobs:
           python-version: '3.12'
       - name: Install dependencies
         run: pip install -r requirements.txt
-      - name: Run integration_test.py
-        run: ./tests/integration_test.py
-      - name: Run smoke_test.py
-        run: ./tests/smoke_test.py
-      - name: Run unit_test.py
-        run: ./tests/unit_test.py
+      - name: Run integration tests
+        run: |
+          source venv/bin/activate
+          python tests/integration_test.py
+          python tests/smoke_test.py
+          python tests/unit_test.py
       - name: Build Docker image from Dockerfile
         run: docker build -t weather-ml-app:ci-test
       - name: Create container
