--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -36,5 +36,5 @@ jobs:
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
       - name: Push Docker image
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/weather-ml-app:v1
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/weather-ml-app:v1
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/weather-ml-app:latest .
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/weather-ml-app:latest
