--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -15,5 +15,5 @@ jobs:
             kubectl version --client
       - name: Deploy to Kubernetes
         run: |
-          kubectl apply -f k8s/deployment.yml
-          kubectl apply -f k8s/service.yml
+          kubectl apply -f k8s/deployment.yaml
+          kubectl apply -f k8s/service.yaml
