--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -9,6 +9,11 @@ spec:
   selector:
     matchLabels:
       app: weather-ml-app
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   template:
     metadata:
       labels:
@@ -16,7 +21,7 @@ spec:
     spec:
       containers:
         - name: weather-ml-app
-          image: Dockerimage
+          image: yourdockerhubusername/weather-ml-app:latest
           ports:
             - containerPort: 5000
           env:
@@ -24,6 +29,12 @@ spec:
               value: production
             - name: PORT
               value: "5000"
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 5000
+            initialDelaySeconds: 5
+            periodSeconds: 5
 ---
 apiVersion: v1
 kind: Service
