--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -10,13 +10,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Install Docker (required by Minikube)
-      - name: Install Docker
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y docker.io
-          sudo systemctl start docker
-          sudo systemctl enable docker
+      - name: Set up Docker
+        uses: docker/setup-docker@v3
+        with:
+          version: '24.0.2'
 
       # Install Minikube
       - name: Install Minikube
